<resources>
    <string name="app_name">DAppFeed</string>

    <!--底部Tab-->
    <string name="tab_game">游戏</string>
    <string name="tab_me">我</string>

    <!--顶部标题-->
    <string name="title_game_square">游戏广场</string>
    <string name="title_me">我</string>

    <string name="game_square">游戏广场</string>
    <string name="today_gains">今日收益</string>

    <!--首页-->
    <string name="press_again_to_exit">再按一次退出</string>
    <string name="find_new_version">发现新版本</string>
    <string name="cancel">取消</string>
    <string name="experience_immediately">立即体验</string>
    <string name="downloading_with_progress">正在下载…%s %%</string>
    <string name="install_immediately">立即安装</string>
    <string name="download_failed">下载失败</string>

    <!--登录-->
    <string name="phone_number">手机号码</string>
    <string name="verify_code">验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="invitation_code">邀请码</string>
    <string name="optional">选填</string>
    <string name="login_immediately">立即登录</string>
    <string name="login">登录</string>
    <string name="left_seconds">%s 秒</string>
    <string name="user_agreement">登录暨同意
        <u>
            <font color='#333333'>《用户协议书》</font>
        </u>
    </string>

    <!--邀请记录-->
    <string name="invitation_history_detail">邀请记录明细</string>
    <string name="verified">已实名</string>
    <string name="unverified">未实名</string>
    <string name="invited_user">邀请用户</string>

    <!--选择区号-->
    <string name="choose_area_code">选择区号</string>

    <!--KYCStatus-->
    <string name="please_input_id_card_number">请输入 18 位身份证号码</string>
    <string name="id_card_number">身份证号码</string>
    <string name="verify_immediately">1 分钟极速认证</string>
    <string name="id_card_has_been_used">该证件已经被使用过了</string>
    <string name="you_have_passed_kyc">您已经通过了实名认证，请勿重复提交</string>
    <string name="kyc_verify_success">验证成功</string>
    <string name="unknown_error">未知错误</string>
    <string name="kyc_verifing">认证中</string>
    <string name="please_complete_kyc_verification">请完成实名认证</string>

    <!--游戏广场-->
    <string name="play_count">%s人正在玩</string>
    <string name="coin">金币</string>
    <string name="cash">现金</string>
    <string name="details">明细</string>
    <string name="click_to_sign">点我签到</string>
    <string name="invite_friend_to_get_cash">邀请好友赚现金</string>
    <string name="popular_games">热门游戏</string>
    <string name="login_immediately_to_get_five_coins">立即登录领取 5 金币</string>

    <!--游戏页-->
    <string name="exit_game">退出游戏</string>

    <!--我-->
    <string name="today_revenue">今日收益：%s</string>
    <string name="today_revenue_with_symbol">今日收益：￥%s</string>
    <string name="open_wechat">打开微信？</string>
    <string name="wechat_number_copied">已复制微信号:%s</string>

    <!--设置-->
    <string name="settings">设置</string>
    <string name="certification">实名认证</string>
    <string name="version_update">版本更新</string>
    <string name="logout">退出登录</string>
    <string name="sure">确定</string>
    <string name="checking_update">正在检查更新</string>
    <string name="newest_version">已经是最新版本</string>
    <string name="checking_update_failed">检查失败</string>

    <!--个人信息-->
    <string name="personal_info">个人信息</string>
    <string name="phone">手机号</string>
    <string name="kyc_slogan">安全 · 保障 · 便捷</string>
    <string name="kyc_explanation">提升您的账户资产安全等级，充值提现更便捷</string>
    <string name="kyc_identification">实名认证</string>
    <string name="kyc_identified">已认证</string>
    <string name="kyc_unidentified">未认证</string>
    <string name="kyc_identifing">审核中</string>

    <!--金币资产-->
    <string name="coin_assets">金币资产</string>

    <!--现金资产-->
    <string name="cash_assets">现金资产</string>

    <!--游戏收益规则说明-->
    <string name="revenue_rules">游戏收益规则说明</string>

    <!--划转-->
    <string name="transfer_coin">划转金币</string>
    <string name="transfer_cash">划转现金</string>
    <string name="coin_balance">可划转金币</string>
    <string name="cash_balance">现金账户余额</string>
    <string name="coin_quota">提现额度</string>
    <string name="cash_quota">选择划转额度</string>
    <string name="confirm_extraction">确认提取</string>

    <!--充值-->
    <string name="order_cost">订单金额</string>
    <string name="pay_method">支付方式</string>
    <string name="pay_hint">1. 充值金币和游戏内挣得得金币，可随时全额提现 \n2. 所有游戏共用一个金币账户，全场通用 \n3. 充值时 1金币 = 0.452元人民币 \n4.
        0.1金币可玩HyperSanke 1局，或Trap one 1局
    </string>

    <!--划转详情-->
    <string name="transfer_detail">明细详情</string>
    <string name="details_with_colon">明细：</string>
    <string name="category_with_colon">类型：</string>
    <string name="status_with_colon">状态：</string>
    <string name="time_with_colon">时间：</string>
    <string name="serial_number_with_colon">流水号：</string>

    <!--划转成功-->
    <string name="transfer_success">划转成功</string>
    <string name="transfer_success_description">划转成功，您可以前往jetaxon.pro查看</string>
    <string name="finish">完成</string>
    <!--充值成功-->
    <string name="recharge_success">充值成功</string>
    <string name="recharge_success_description">充值成功，请返回账户查看</string>

    <!--现金、金币资产明细-->
    <string name="cumulative_gain">累计收益</string>
    <string name="today_obtain">今日获得</string>
    <string name="gains_detail">收益明细</string>
    <string name="ongoing">进行中</string>
    <string name="arrived">已到账</string>
    <string name="finished">已完成</string>
    <string name="failed">失败</string>
    <string name="money_with_symbol">¥%s</string>
    <string name="approximately">≈ ¥ %s</string>
    <string name="transferable">可划转</string>
    <string name="locked">锁定</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="transfer">划转</string>
    <string name="recharge">充值</string>

    <!--充值-->
    <string name="recharge_game_coins">游戏金币充值</string>
    <string name="pay_immediately">立即支付</string>
    <string name="recharge_card_title">游戏金币充值卡</string>
    <string name="recharge_card_count">100 金币</string>
    <string name="recharge_card_description">游戏消费赠返金币</string>

</resources>
