<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:background="@color/C2"
        android:layout_height="match_parent">

    <include layout="@layout/title_layout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_height="wrap_content"
             android:layout_width="@dimen/match_constraint"/>

    <TextView
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/C6"
            android:id="@+id/tv_phone_number_label"
            android:textSize="@dimen/F4"
            android:text="@string/phone"
            android:includeFontPadding="false"
            android:paddingStart="@dimen/L1"
            android:paddingEnd="@dimen/match_constraint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_title"
            android:layout_height="@dimen/L4"/>

    <TextView
            android:layout_width="@dimen/match_constraint"
            android:gravity="center_vertical|end"
            android:textColor="@color/C6"
            android:includeFontPadding="false"
            android:id="@+id/tv_phone_number"
            android:textSize="@dimen/F4"
            tools:text="17600697395"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_phone_number_label"
            app:layout_constraintTop_toTopOf="@id/tv_phone_number_label"
            app:layout_constraintBottom_toBottomOf="@id/tv_phone_number_label"
            android:paddingEnd="@dimen/L1"
            android:paddingStart="@dimen/match_constraint"
            android:layout_height="@dimen/match_constraint"/>

    <include layout="@layout/divider"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_phone_number_label"
             android:layout_width="@dimen/match_constraint"
             android:layout_height="@dimen/divider_size"
             android:id="@+id/v_divider"/>

    <ImageView
            android:id="@+id/iv_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_divider"
            android:layout_marginTop="@dimen/L4"
            android:src="@mipmap/kyc_logo"
            android:layout_width="@dimen/dp_personal_info_logo_width"
            android:layout_height="@dimen/dp_personal_info_logo_height"/>

    <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo"
            android:text="@string/kyc_slogan"
            android:textColor="@color/C6"
            android:id="@+id/tv_slogan"
            android:includeFontPadding="false"
            android:textSize="@dimen/F1"
            android:layout_marginTop="@dimen/dp_personal_info_slogan_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_slogan"
            android:layout_width="wrap_content"
            android:includeFontPadding="false"
            android:textSize="@dimen/F4"
            android:id="@+id/tv_explanation"
            android:textColor="@color/C7"
            android:text="@string/kyc_explanation"
            android:layout_marginTop="@dimen/dp_personal_info_explanation_margin_top"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/btn_kyc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/C2"
            android:textSize="@dimen/F3"
            android:text="@string/kyc_identification"
            android:layout_marginStart="@dimen/L1"
            android:background="@drawable/round_rect_solid_dark_blue_bg"
            android:layout_marginEnd="@dimen/L1"
            android:layout_marginTop="@dimen/dp_personal_info_kyc_button_margin_top"
            app:layout_constraintTop_toBottomOf="@id/tv_explanation"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="@dimen/L2"/>
</android.support.constraint.ConstraintLayout>