<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:background="@color/C2"
        android:layout_height="match_parent">

    <include layout="@layout/title_layout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_width="@dimen/match_constraint"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_title"
            android:layout_marginStart="@dimen/L1"
            android:layout_marginTop="@dimen/dp_kyc_id_card_label_margin_top"
            android:textColor="@color/C6"
            android:includeFontPadding="false"
            android:textSize="@dimen/F4"
            android:text="@string/please_input_id_card_number"
            android:layout_width="wrap_content"
            android:id="@+id/tv_id_card_number"
            android:layout_height="wrap_content"/>

    <EditText
            android:layout_width="@dimen/match_constraint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/L1"
            android:layout_marginEnd="@dimen/L1"
            android:background="@null"
            app:layout_constraintTop_toBottomOf="@id/tv_id_card_number"
            android:hint="@string/id_card_number"
            android:textColorHint="@color/C9"
            android:paddingTop="@dimen/L7"
            android:lines="1"
            android:inputType="textVisiblePassword"
            android:digits="0123456789X"
            android:id="@+id/et_id_card_number"
            android:imeOptions="actionDone"
            android:paddingBottom="@dimen/L7"
            android:layout_marginTop="@dimen/L7"
            android:textSize="@dimen/F3"
            android:layout_height="wrap_content" tools:ignore="TextFields"/>

    <include layout="@layout/divider"
             android:layout_width="@dimen/match_constraint"
             android:layout_height="@dimen/divider_size"
             app:layout_constraintStart_toStartOf="@id/et_id_card_number"
             android:id="@+id/v_divider"
             app:layout_constraintEnd_toEndOf="@id/et_id_card_number"
             app:layout_constraintTop_toBottomOf="@id/et_id_card_number"/>

    <Button
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_divider"
            android:layout_marginStart="@dimen/L1"
            android:textSize="@dimen/F3"
            android:id="@+id/btn_verify"
            android:textColor="@color/C2"
            android:text="@string/verify_immediately"
            android:background="@drawable/round_rect_solid_btn_bg"
            android:layout_marginEnd="@dimen/L1"
            android:layout_marginTop="@dimen/dp_kyc_verify_margin_top"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="@dimen/L2"/>
</android.support.constraint.ConstraintLayout>