<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:background="@color/C2"
        android:layout_height="match_parent">

    <include layout="@layout/title_layout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_height="wrap_content"
             android:layout_width="@dimen/match_constraint"/>

    <TextView
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_phone_number"
            app:layout_constraintBottom_toBottomOf="@+id/et_phone_number"
            android:layout_marginStart="@dimen/L1"
            android:textSize="@dimen/F3"
            android:textColor="@color/C6"
            android:id="@+id/tv_area_code"
            tools:text="+86"
            android:includeFontPadding="false"
            android:layout_height="wrap_content"/>

    <ImageView
            android:id="@+id/iv_down_arrow"
            android:src="@mipmap/down_arrow"
            app:layout_constraintStart_toEndOf="@id/tv_area_code"
            android:layout_marginStart="@dimen/dp_down_arrow_margin_start"
            app:layout_constraintTop_toTopOf="@+id/et_phone_number"
            app:layout_constraintBottom_toBottomOf="@+id/et_phone_number"
            android:layout_width="@dimen/L7"
            android:layout_height="@dimen/L7"/>

    <EditText
            android:layout_width="@dimen/match_constraint"
            android:textSize="@dimen/F3"
            android:inputType="phone"
            android:id="@+id/et_phone_number"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/L1"
            android:textColorHint="@color/C9"
            android:lines="1"
            android:imeOptions="actionNext"
            android:paddingTop="@dimen/dp_input_vertical_padding"
            android:paddingBottom="@dimen/dp_input_vertical_padding"
            app:layout_constraintTop_toBottomOf="@id/cl_title"
            android:layout_marginTop="@dimen/L4"
            android:background="@null"
            android:nextFocusDown="@id/et_verify_code"
            app:layout_constraintStart_toEndOf="@id/iv_down_arrow"
            android:layout_marginStart="@dimen/dp_phone_number_margin_start"
            android:hint="@string/phone_number"
            android:layout_height="wrap_content"/>

    <include layout="@layout/divider"
             app:layout_constraintEnd_toEndOf="@id/et_phone_number"
             app:layout_constraintTop_toBottomOf="@id/et_phone_number"
             android:layout_width="@dimen/match_constraint"
             android:layout_height="@dimen/divider_size"
             android:id="@+id/v_divider1"
             app:layout_constraintStart_toStartOf="@id/tv_area_code"/>

    <EditText
            android:layout_width="@dimen/match_constraint"
            android:textSize="@dimen/F3"
            android:inputType="number"
            android:lines="1"
            android:imeOptions="actionNext"
            android:paddingTop="@dimen/dp_input_vertical_padding"
            android:paddingBottom="@dimen/dp_input_vertical_padding"
            android:id="@+id/et_verify_code"
            app:layout_constraintEnd_toStartOf="@+id/btn_get_verify_code"
            android:layout_marginEnd="@dimen/L1"
            app:layout_constraintTop_toBottomOf="@id/v_divider1"
            android:layout_marginTop="@dimen/dp_input_margin_top"
            android:background="@null"
            android:textColorHint="@color/C9"
            android:nextFocusDown="@id/et_invitation_code"
            app:layout_constraintStart_toStartOf="@id/tv_area_code"
            android:hint="@string/verify_code"
            android:layout_height="wrap_content"/>

    <Button
            android:background="@drawable/round_rect_no_solid_btn_bg"
            android:layout_width="90dp"
            android:text="@string/get_verify_code"
            android:textColor="@color/C1"
            android:textSize="@dimen/F4"
            app:layout_constraintTop_toTopOf="@id/et_verify_code"
            app:layout_constraintBottom_toBottomOf="@id/et_verify_code"
            app:layout_constraintEnd_toEndOf="@id/et_phone_number"
            android:id="@+id/btn_get_verify_code"
            android:layout_height="36dp"/>

    <include layout="@layout/divider"
             android:id="@+id/v_divider2"
             app:layout_constraintEnd_toEndOf="@id/et_phone_number"
             app:layout_constraintTop_toBottomOf="@id/et_verify_code"
             android:layout_width="@dimen/match_constraint"
             android:layout_height="@dimen/divider_size"
             app:layout_constraintStart_toStartOf="@id/tv_area_code"/>

    <TextView
            android:id="@+id/tv_invitation_code"
            android:layout_width="wrap_content"
            android:includeFontPadding="false"
            android:textSize="@dimen/F3"
            android:textColor="@color/C6"
            app:layout_constraintStart_toStartOf="@id/tv_area_code"
            app:layout_constraintTop_toTopOf="@+id/et_invitation_code"
            app:layout_constraintBottom_toBottomOf="@+id/et_invitation_code"
            android:text="@string/invitation_code"
            android:layout_height="wrap_content"/>

    <EditText
            android:layout_width="@dimen/match_constraint"
            android:textSize="@dimen/F3"
            android:paddingTop="@dimen/dp_input_vertical_padding"
            android:paddingBottom="@dimen/dp_input_vertical_padding"
            android:lines="1"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:id="@+id/et_invitation_code"
            app:layout_constraintEnd_toEndOf="@id/et_phone_number"
            app:layout_constraintTop_toBottomOf="@id/v_divider2"
            android:layout_marginTop="@dimen/dp_input_margin_top"
            android:background="@null"
            android:layout_marginStart="@dimen/dp_invitation_code_margin_start"
            android:textColorHint="@color/C9"
            app:layout_constraintStart_toEndOf="@id/tv_invitation_code"
            android:hint="@string/optional"
            android:layout_height="wrap_content"/>

    <include layout="@layout/divider"
             android:id="@+id/v_divider3"
             app:layout_constraintEnd_toEndOf="@id/et_phone_number"
             app:layout_constraintTop_toBottomOf="@id/et_invitation_code"
             android:layout_width="@dimen/match_constraint"
             android:layout_height="@dimen/divider_size"
             app:layout_constraintStart_toStartOf="@id/tv_area_code"/>

    <Button
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_divider3"
            android:layout_marginStart="@dimen/L1"
            android:textSize="@dimen/F3"
            android:id="@+id/btn_login"
            android:textColor="@color/C2"
            android:text="@string/login_immediately"
            android:background="@drawable/round_rect_solid_btn_bg"
            android:layout_marginEnd="@dimen/L1"
            android:layout_marginTop="@dimen/dp_login_margin_top"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="@dimen/L2"/>


    <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/tv_agreement"
            tools:text="登录暨同意《用户协议书》"
            android:includeFontPadding="false"
            android:textColor="@color/color_9B9B9B"
            android:textSize="@dimen/F5"
            android:layout_marginBottom="@dimen/dp_agreement_margin_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
</android.support.constraint.ConstraintLayout>