<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include layout="@layout/title_layout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_height="wrap_content"
             android:layout_width="@dimen/match_constraint"/>

    <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/C2"
            android:gravity="center_vertical"
            tools:text="¥23.44"
            android:includeFontPadding="false"
            android:textSize="@dimen/F1"
            android:id="@+id/tv_money"
            android:textColor="@color/C6"
            android:paddingStart="@dimen/L1"
            app:layout_constraintTop_toBottomOf="@id/cl_title"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="@dimen/dp_transfer_detail_money_height"/>

    <TextView
            style="@style/TransferDetailLabelTextView"
            android:text="@string/details_with_colon"
            android:id="@+id/tv_detail_label"
            app:layout_constraintTop_toBottomOf="@id/tv_money"
            tools:ignore="MissingConstraints"/>

    <TextView
            style="@style/TransferDetailTextView"
            tools:text="划转到JetAxon"
            android:id="@+id/tv_detail"
            app:layout_constraintTop_toTopOf="@id/tv_detail_label"
            app:layout_constraintBottom_toBottomOf="@id/tv_detail_label"
            app:layout_constraintStart_toEndOf="@id/tv_detail_label"/>

    <TextView
            style="@style/TransferDetailLabelTextView"
            android:text="@string/category_with_colon"
            android:id="@+id/tv_category_label"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_label"
            tools:ignore="MissingConstraints"/>

    <TextView
            style="@style/TransferDetailTextView"
            tools:text="划转"
            android:id="@+id/tv_category"
            app:layout_constraintTop_toTopOf="@id/tv_category_label"
            app:layout_constraintBottom_toBottomOf="@id/tv_category_label"
            app:layout_constraintStart_toEndOf="@id/tv_category_label"/>

    <TextView
            style="@style/TransferDetailLabelTextView"
            android:text="@string/status_with_colon"
            android:id="@+id/tv_status_label"
            app:layout_constraintTop_toBottomOf="@id/tv_category_label"
            tools:ignore="MissingConstraints"/>

    <TextView
            style="@style/TransferDetailTextView"
            tools:text="已完成"
            android:id="@+id/tv_status"
            app:layout_constraintTop_toTopOf="@id/tv_status_label"
            app:layout_constraintBottom_toBottomOf="@id/tv_status_label"
            app:layout_constraintStart_toEndOf="@id/tv_status_label"/>

    <TextView
            style="@style/TransferDetailLabelTextView"
            android:text="@string/time_with_colon"
            android:id="@+id/tv_time_label"
            app:layout_constraintTop_toBottomOf="@id/tv_status_label"
            tools:ignore="MissingConstraints"/>

    <TextView
            style="@style/TransferDetailTextView"
            tools:text="2019.1.3 16:44:33"
            android:id="@+id/tv_time"
            app:layout_constraintTop_toTopOf="@id/tv_time_label"
            app:layout_constraintBottom_toBottomOf="@id/tv_time_label"
            app:layout_constraintStart_toEndOf="@id/tv_time_label"/>

    <TextView
            style="@style/TransferDetailLabelTextView"
            android:text="@string/serial_number_with_colon"
            android:id="@+id/tv_serial_number_label"
            app:layout_constraintTop_toBottomOf="@id/tv_time_label"
            tools:ignore="MissingConstraints"/>

    <TextView
            style="@style/TransferDetailTextView"
            tools:text="728754928351"
            android:id="@+id/tv_serial_number"
            app:layout_constraintTop_toTopOf="@id/tv_serial_number_label"
            app:layout_constraintBottom_toBottomOf="@id/tv_serial_number_label"
            app:layout_constraintStart_toEndOf="@id/tv_serial_number_label"/>

    <include layout="@layout/divider"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_detail_label"
             android:layout_marginStart="@dimen/L1"
             app:layout_constraintBottom_toTopOf="@id/tv_category_label"
             android:layout_width="@dimen/match_constraint"
             android:layout_height="@dimen/divider_size"/>

    <include layout="@layout/divider"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_category_label"
             android:layout_marginStart="@dimen/L1"
             app:layout_constraintBottom_toTopOf="@id/tv_status_label"
             android:layout_width="@dimen/match_constraint"
             android:layout_height="@dimen/divider_size"/>

    <include layout="@layout/divider"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_status_label"
             android:layout_marginStart="@dimen/L1"
             app:layout_constraintBottom_toTopOf="@id/tv_time_label"
             android:layout_width="@dimen/match_constraint"
             android:layout_height="@dimen/divider_size"/>

    <include layout="@layout/divider"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_time_label"
             android:layout_marginStart="@dimen/L1"
             app:layout_constraintBottom_toTopOf="@id/tv_serial_number_label"
             android:layout_width="@dimen/match_constraint"
             android:layout_height="@dimen/divider_size"/>

    <View
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_serial_number_label"
            android:background="@color/C3"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="@dimen/match_constraint"/>
</android.support.constraint.ConstraintLayout>